// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Controllers with buttons disabled without crashing 1`] = `
<div
  className="Controllers"
>
  <h2
    className="subtitle"
  >
    Controls
  </h2>
  <button
    className="btn controls-btn_back"
    disabled={true}
    onClick={[Function]}
    title="Step back"
  >
    back (
    2
    )
  </button>
  <button
    className="btn controls-btn_restart"
    disabled={true}
    onClick={[Function]}
    title="Restart the game"
  >
    restart
  </button>
  <label
    className="btn-toggle-label"
    htmlFor="toggleButton"
  >
    <button
      className="btn-toggle"
      data-active={false}
      id="toggleButton"
      onClick={[Function]}
      title="Hard mode"
    />
    Hard mode
  </label>
</div>
`;

exports[`should render Controllers with buttons enabled without crashing 1`] = `
<div
  className="Controllers"
>
  <h2
    className="subtitle"
  >
    Controls
  </h2>
  <button
    className="btn controls-btn_back"
    disabled={false}
    onClick={[Function]}
    title="Step back"
  >
    back (
    2
    )
  </button>
  <button
    className="btn controls-btn_restart"
    disabled={false}
    onClick={[Function]}
    title="Restart the game"
  >
    restart
  </button>
  <label
    className="btn-toggle-label"
    htmlFor="toggleButton"
  >
    <button
      className="btn-toggle"
      data-active={false}
      id="toggleButton"
      onClick={[Function]}
      title="Hard mode"
    />
    Hard mode
  </label>
</div>
`;

exports[`should render Controllers with rollback button disabled when rollback is 0 1`] = `
<div
  className="Controllers"
>
  <h2
    className="subtitle"
  >
    Controls
  </h2>
  <button
    className="btn controls-btn_back"
    disabled={true}
    onClick={[Function]}
    title="Step back"
  >
    back (
    0
    )
  </button>
  <button
    className="btn controls-btn_restart"
    disabled={false}
    onClick={[Function]}
    title="Restart the game"
  >
    restart
  </button>
  <label
    className="btn-toggle-label"
    htmlFor="toggleButton"
  >
    <button
      className="btn-toggle"
      data-active={false}
      id="toggleButton"
      onClick={[Function]}
      title="Hard mode"
    />
    Hard mode
  </label>
</div>
`;
